# zlib-bitexact-rs

./: .gitattributes  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  build.rs
.github/workflows/: ci.yml  publish-crates-io.yml  publish.yml
cref/: shim.c
docs/: verifying-against-zlib.md
src/: bitwriter.rs  deflate.rs  lib.rs  longest_match.rs  trees.rs
tests/: differential.rs  golden.rs
tests/common/: mod.rs
