[package]
name = "zlib-bitexact-rs"
# Version scheme (shared with the sibling bit-exact ports, e.g. lzma-sdk-rs,
# libzstd-bitexact-rs): 0.<zlib-digits>.<patch>. The minor encodes the upstream
# zlib release this crate's deflate is bit-exact with (1.3.1 -> 131); the patch
# counts our own fixes against that target (0.131.1, 0.131.2, ...). The leading 0
# marks the public API as still unstable. Retargeting a new zlib bumps the minor.
# Keep in sync with the git tag (v0.131.0).
version = "0.131.0"
edition = "2024"
rust-version = "1.85"
license = "BSD-3-Clause"
description = "Bit-exact pure-Rust port of stock zlib 1.3.1's deflate (byte-identical raw DEFLATE output)."
repository = "https://github.com/danifunker/zlib-bitexact-rs"
documentation = "https://docs.rs/zlib-bitexact-rs"
keywords = ["zlib", "deflate", "compression", "chd", "encoder"]
categories = ["compression"]
readme = "README.md"
# The published crate is a pure-Rust, dependency-free library plus its proof
# (src, tests, README/ROADMAP/LICENSE). Drop the AI dev guide, the CI config, and
# the entire `cref/` differential rig — the vendored zlib C oracle, the FFI shim,
# and build.rs — none of which a consumer needs.
exclude = ["/.github", "/CLAUDE.md", "/cref", "/build.rs"]

[features]
default = []
# Dev/test only: compile the vendored stock zlib 1.3.1 C via build.rs and expose
# it over FFI so tests can diff the Rust deflate output against C `deflate()`
# byte-for-byte. Requires a C compiler. Not usable from the published crate
# (build.rs + cref/ are excluded); run it from a repo checkout:
# `cargo test --features cref`.
cref = []

[lib]
name = "zlib_bitexact_rs"

[build-dependencies]
# Only used by build.rs under the `cref` feature (a repo checkout); the published
# crate excludes build.rs, so consumers pull in nothing.
cc = "1.2"

[profile.dev]
# The differential tests push the full corpus through both the Rust and C
# deflate; opt-level 1 keeps debug test runs brisk.
opt-level = 1
