[package]
name = "zlib-bitexact-rs"
# Version scheme (shared with the sibling bit-exact ports, e.g. lzma-sdk-rs,
# libzstd-bitexact-rs): 0.<zlib-digits>.<patch>. The minor encodes the upstream
# zlib release this crate's deflate is bit-exact with (1.3.1 -> 131); the patch
# counts our own fixes against that target (0.131.1, 0.131.2, ...). The leading 0
# marks the public API as still unstable. Retargeting a new zlib bumps the minor.
# Keep in sync with the git tag (v0.131.0).
version = "0.131.0"
edition = "2024"
rust-version = "1.85"
license = "BSD-3-Clause"
description = "Bit-exact pure-Rust port of stock zlib 1.3.1's deflate (byte-identical raw DEFLATE output)."
repository = "https://github.com/danifunker/zlib-bitexact-rs"
documentation = "https://docs.rs/zlib-bitexact-rs"
keywords = ["zlib", "deflate", "compression", "chd", "encoder"]
categories = ["compression"]
readme = "README.md"
# Zero-dependency pure Rust: the whole crate is `src/` + the golden-vector tests +
# README/ROADMAP/LICENSE. Drop the AI dev guide and the CI config — not needed by
# consumers. (There is no build script and no C: the encoder is verified against
# committed golden vectors; see docs/verifying-against-zlib.md to re-check vs the
# C oracle.)
exclude = ["/.github", "/CLAUDE.md"]

[lib]
name = "zlib_bitexact_rs"
